fix text align on salary details

--- a/src/components/JobDetailPage/JobDetailPage.scss
+++ b/src/components/JobDetailPage/JobDetailPage.scss
@@ -172,9 +172,7 @@
 }
 
 .salaryDetails {
-    button, input, select, h3 {
     text-align: center;
-    }
 }
 
 @media screen and (max-width: 600px) {
